# Bowling_Score_Calculator

./: .gitignore  Bowling_Score_Calculator.cpp  CMakeLists.txt  README.md  compile.sh  filedata.txt
